name:           kurt
version:        0.0.3
category:       AI, Game
synopsis:       Lefants haskell go engine
description:
  Lefants haskell go engine
license:        GPL
license-file:   COPYRIGHT
copyright:      (c) 2010 Fabian Linzberger
author:         Fabian Linzberger <e@lefant.net>
maintainer:     Fabian Linzberger <e@lefant.net>
homepage:       http://lefant.net/
stability:      experimental
tested-with:    GHC==6.10
cabal-version:  >= 1.6
build-type:     Simple

data-files:
extra-tmp-files:
extra-source-files:
  COPYING
  README

executable kurt
  main-is:        kurt.hs
  hs-source-dirs: src
  build-depends: base >= 3 && < 5
               , cmdargs
               , containers >= 0.3
               , deepseq
               , mwc-random
               , parallel
               , parsec >= 3
               , primitive
               , random
               , rosezipper < 0.2
               , time
               , unordered-containers
  ghc-options: -O2 -threaded -rtsopts
  ghc-prof-options: -auto-all -caf-all

source-repository head
  type:     git
  location: git://github.com/lefant/kurt
