name:           kurt
version:        0.0.4
category:       AI, Game
synopsis:       Lefants haskell go engine
description:
  Lefants haskell go engine
license:        GPL
license-file:   COPYRIGHT
copyright:      (c) 2010 Fabian Linzberger
author:         Fabian Linzberger <e@lefant.net>
maintainer:     Fabian Linzberger <e@lefant.net>
homepage:       http://lefant.net/
stability:      experimental
tested-with:    GHC==7.8.3
cabal-version:  >= 1.6
build-type:     Simple

data-files:
extra-tmp-files:
extra-source-files:
  COPYING
  README.md

executable kurt
  main-is:        kurt.hs
  hs-source-dirs: src
  build-depends: base >= 3 && < 5
               , cmdargs
               , containers >= 0.3
               , deepseq
               , mwc-random
               , parallel
               , parsec >= 3
               , primitive
               , random
               , rosezipper < 0.2
               , time
               , unordered-containers
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , DeriveDataTypeable
                     , FlexibleInstances
                     , ScopedTypeVariables
  ghc-options: -O2 -Wall -Werror -rtsopts -threaded -debug -funbox-strict-fields

source-repository head
  type:     git
  location: git://github.com/lefant/kurt
